markdown/ai/2.0.0/api/chat/mistralai-chat.md
---
title: "Mistral AI Chat"
source: "ROOT:api/chat/mistralai-chat.adoc"
---

# Mistral AI Chat

Spring AI supports the various AI language models from Mistral AI. You can interact with Mistral AI language models and create a multilingual conversational assistant based on Mistral models.

> [!TIP]
> Mistral AI offers an OpenAI API-compatible endpoint as well.
> Check the [OpenAI API compatibility](#_openai_api_compatibility) section to learn how to use the [Spring AI OpenAI](openai-chat.md) integration to talk to a Mistral endpoint.

<a id="_prerequisites"></a>

## Prerequisites

You will need to create an API with Mistral AI to access Mistral AI language models.

Create an account at [Mistral AI registration page](https://auth.mistral.ai/ui/registration) and generate the token on the [API Keys page](https://console.mistral.ai/api-keys/).

The Spring AI project defines a configuration property named `spring.ai.mistralai.api-key` that you should set to the value of the `API Key` obtained from console.mistral.ai.

You can set this configuration property in your `application.properties` file:

```properties
spring.ai.mistralai.api-key=<your-mistralai-api-key>
```

For enhanced security when handling sensitive information like API keys, you can use Spring Expression Language (SpEL) to reference a custom environment variable:

```yaml
# In application.yml
spring:
  ai:
    mistralai:
      api-key: ${MISTRALAI_API_KEY}
```

```bash
# In your environment or .env file
export MISTRALAI_API_KEY=<your-mistralai-api-key>
```

You can also set this configuration programmatically in your application code:

```java
// Retrieve API key from a secure source or environment variable
String apiKey = System.getenv("MISTRALAI_API_KEY");
```

<a id="_add_repositories_and_bom"></a>

### Add Repositories and BOM

Spring AI artifacts are published in Maven Central and Spring Snapshot repositories.
Refer to the [Artifact Repositories](../../getting-started.md#artifact-repositories) section to add these repositories to your build system.

To help with dependency management, Spring AI provides a BOM (bill of materials) to ensure that a consistent version of Spring AI is used throughout the entire project. Refer to the [Dependency Management](../../getting-started.md#dependency-management) section to add the Spring AI BOM to your build system.

<a id="_auto_configuration"></a>

## Auto-configuration

> [!NOTE]
> There has been a significant change in the Spring AI auto-configuration, starter modules' artifact names.
> Please refer to the [upgrade notes](https://docs.spring.io/spring-ai/reference/upgrade-notes.html) for more information.

Spring AI provides Spring Boot auto-configuration for the Mistral AI Chat Client.
To enable it add the following dependency to your project’s Maven `pom.xml` file:

```xml
<dependency>
    <groupId>org.springframework.ai</groupId>
    <artifactId>spring-ai-starter-model-mistral-ai</artifactId>
</dependency>
```

or to your Gradle `build.gradle` build file.

```groovy
dependencies {
    implementation 'org.springframework.ai:spring-ai-starter-model-mistral-ai'
}
```

> [!TIP]
> Refer to the [Dependency Management](../../getting-started.md#dependency-management) section to add the Spring AI BOM to your build file.

<a id="_chat_properties"></a>

### Chat Properties

<a id="_retry_properties"></a>

#### Retry Properties

The prefix `spring.ai.retry` is used as the property prefix that lets you configure the retry mechanism for the Mistral AI chat model.

| Property | Description | Default |
| --- | --- | --- |
| spring.ai.retry.max-attempts | Maximum number of retry attempts. | 10 |
| spring.ai.retry.backoff.initial-interval | Initial sleep duration for the exponential backoff policy. | 2 sec. |
| spring.ai.retry.backoff.multiplier | Backoff interval multiplier. | 5 |
| spring.ai.retry.backoff.max-interval | Maximum backoff duration. | 3 min. |
| spring.ai.retry.on-client-errors | If false, throw a NonTransientAiException, and do not attempt retry for `4xx` client error codes | false |
| spring.ai.retry.exclude-on-http-codes | List of HTTP status codes that should not trigger a retry (e.g. to throw NonTransientAiException). | empty |
| spring.ai.retry.on-http-codes | List of HTTP status codes that should trigger a retry (e.g. to throw TransientAiException). | empty |

<a id="_connection_properties"></a>

#### Connection Properties

The prefix `spring.ai.mistralai` is used as the property prefix that lets you connect to OpenAI.

| Property | Description | Default |
| --- | --- | --- |
| spring.ai.mistralai.base-url | The URL to connect to | [api.mistral.ai](https://api.mistral.ai) |
| spring.ai.mistralai.api-key | The API Key | - |

<a id="_configuration_properties"></a>

#### Configuration Properties

> [!NOTE]
> Enabling and disabling of the chat auto-configurations are now configured via top level properties with the prefix `spring.ai.model.chat`.
>
> To enable, spring.ai.model.chat=mistral (It is enabled by default)
>
> To disable, spring.ai.model.chat=none (or any value which doesn’t match mistral)
>
> This change is done to allow configuration of multiple models.

The prefix `spring.ai.mistralai.chat` is the property prefix that lets you configure the chat model implementation for Mistral AI.

| Property | Description | Default |
| --- | --- | --- |
| spring.ai.mistralai.chat.enabled (Removed and no longer valid) | Enable Mistral AI chat model. | true |
| spring.ai.model.chat | Enable Mistral AI chat model. | mistral |
| spring.ai.mistralai.chat.base-url | Optional override for the `spring.ai.mistralai.base-url` property to provide chat-specific URL. | - |
| spring.ai.mistralai.chat.api-key | Optional override for the `spring.ai.mistralai.api-key` to provide chat-specific API Key. | - |
| spring.ai.mistralai.chat.model | This is the Mistral AI Chat model to use | `open-mistral-7b`, `open-mixtral-8x7b`, `open-mixtral-8x22b`, `mistral-small-latest`, `mistral-large-latest` |
| spring.ai.mistralai.chat.temperature | The sampling temperature to use that controls the apparent creativity of generated completions. Higher values will make output more random while lower values will make results more focused and deterministic. It is not recommended to modify `temperature` and `top_p` for the same completions request as the interaction of these two settings is difficult to predict. | 0.8 |
| spring.ai.mistralai.chat.max-tokens | The maximum number of tokens to generate in the chat completion. The total length of input tokens and generated tokens is limited by the model’s context length. | - |
| spring.ai.mistralai.chat.safe-prompt | Indicates whether to inject a security prompt before all conversations. | false |
| spring.ai.mistralai.chat.random-seed | This feature is in Beta. If specified, our system will make a best effort to sample deterministically, such that repeated requests with the same seed and parameters should return the same result. | - |
| spring.ai.mistralai.chat.stop | Stop generation if this token is detected. Or if one of these tokens is detected when providing an array. | - |
| spring.ai.mistralai.chat.top-p | An alternative to sampling with temperature, called nucleus sampling, where the model considers the results of the tokens with top\_p probability mass. So 0.1 means only the tokens comprising the top 10% probability mass are considered. We generally recommend altering this or `temperature` but not both. | - |
| spring.ai.mistralai.chat.response-format | An object specifying the format that the model must output. Setting to `{ "type": "json_object" }` enables JSON mode, which guarantees the message the model generates is valid JSON. Setting to `{ "type": "json_schema" }` with a supplied schema enables native structured outputs, which guarantees the model will match your supplied JSON schema. See the [Structured Output](#structured-output) section for more details. | - |
| spring.ai.mistralai.chat.reasoning-effort | Controls the reasoning effort level for adjustable reasoning models. Valid values include `high` or `none`. | - |
| spring.ai.mistralai.chat.tools | A list of tools the model may call. Currently, only functions are supported as a tool. Use this to provide a list of functions the model may generate JSON inputs for. | - |
| spring.ai.mistralai.chat.tool-choice | Controls which (if any) function is called by the model. `none` means the model will not call a function and instead generates a message. `auto` means the model can pick between generating a message or calling a function. Specifying a particular function via `{"type: "function", "function": {"name": "my_function"}}` forces the model to call that function. `none` is the default when no functions are present. `auto` is the default if functions are present. | - |
| spring.ai.mistralai.chat.tool-callbacks | Tool Callbacks to register with the ChatModel. | - |

> [!NOTE]
> You can override the common `spring.ai.mistralai.base-url` and `spring.ai.mistralai.api-key` for the `ChatModel` and `EmbeddingModel` implementations.
> The `spring.ai.mistralai.chat.base-url` and `spring.ai.mistralai.chat.api-key` properties, if set, take precedence over the common properties.
> This is useful if you want to use different Mistral AI accounts for different models and different model endpoints.

> [!TIP]
> All properties prefixed with `spring.ai.mistralai.chat` can be overridden at runtime by adding request-specific [Runtime Options](#chat-options) to the `Prompt` call.

<a id="chat-options"></a>

## Runtime Options

The [MistralAiChatOptions.java](https://github.com/spring-projects/spring-ai/blob/main/models/spring-ai-mistral-ai/src/main/java/org/springframework/ai/mistralai/MistralAiChatOptions.java) provides model configurations, such as the model to use, the temperature, the frequency penalty, etc.

On start-up, the default options can be configured with the `MistralAiChatModel(api, options)` constructor or the `spring.ai.mistralai.chat.*` properties.

At run-time, you can override the default options by adding new, request-specific options to the `Prompt` call.
For example, to override the default model and temperature for a specific request:

```java
ChatResponse response = chatModel.call(
    new Prompt(
        "Generate the names of 5 famous pirates.",
        MistralAiChatOptions.builder()
            .model(MistralAiApi.ChatModel.MISTRAL_LARGE.getValue())
            .temperature(0.5)
        .build()
    ));
```

> [!TIP]
> In addition to the model specific [MistralAiChatOptions](https://github.com/spring-projects/spring-ai/blob/main/models/spring-ai-mistral-ai/src/main/java/org/springframework/ai/mistralai/MistralAiChatOptions.java) you can use a portable [ChatOptions](https://github.com/spring-projects/spring-ai/blob/main/spring-ai-model/src/main/java/org/springframework/ai/chat/prompt/ChatOptions.java) instance, created with [ChatOptions#builder()](https://github.com/spring-projects/spring-ai/blob/main/spring-ai-model/src/main/java/org/springframework/ai/chat/prompt/DefaultChatOptionsBuilder.java).

<a id="_function_calling"></a>

## Function Calling

You can register custom Java functions with the `MistralAiChatModel` and have the Mistral AI model intelligently choose to output a JSON object containing arguments to call one or many of the registered functions.
This is a powerful technique to connect the LLM capabilities with external tools and APIs.
Read more about [Tool Calling](../tools.md).

`MistralAiChatModel` does not execute tool calls internally.
Tool execution must be handled externally using one of two supported approaches:

- **[ChatClient with ToolCallingAdvisor](../tools.md#_chatclient_tool_execution)** — the recommended approach for most use cases. `ToolCallingAdvisor` is automatically registered and manages the tool-call loop transparently.
- **[User-controlled tool execution](../tools.md#_user_controlled_tool_execution)** — use `DefaultToolCallingManager` directly when you need full control over the loop.

<a id="_tool_calling_via_chatclient_recommended"></a>

### Tool Calling via ChatClient (Recommended)

Use `ChatClient` with `ToolCallingAdvisor` for both synchronous and streaming tool execution.
`ToolCallingAdvisor` is auto-registered when tools are present, so no explicit advisor configuration is required.

```java
ToolCallback weatherCallback = FunctionToolCallback.builder("getCurrentWeather", new WeatherService())
    .description("Get the weather in location")
    .inputType(WeatherService.Request.class)
    .build();

// Synchronous
String response = ChatClient.create(chatModel)
    .prompt()
    .user("What's the weather in Paris, Tokyo, and New York?")
    .tools(weatherCallback)
    .call()
    .content();

// Streaming
Flux<String> stream = ChatClient.create(chatModel)
    .prompt()
    .user("What's the weather in Paris, Tokyo, and New York?")
    .tools(weatherCallback)
    .stream()
    .content();
```

<a id="_user_controlled_tool_execution"></a>

### User-Controlled Tool Execution

Use this pattern when you need direct access to the `ChatModel` API and want full control over the tool-call loop.
Invoke `ChatModel` directly without `ToolCallingAdvisor`; check for tool calls yourself and drive the loop using `ToolCallingManager`.

```java
ToolCallingManager toolCallingManager = ToolCallingManager.builder().build();

MistralAiChatOptions options = MistralAiChatOptions.builder()
    .toolCallbacks(ToolCallbacks.from(new WeatherService()))
    .build();

Prompt prompt = new Prompt("What's the weather in Paris, Tokyo, and New York?", options);
ChatResponse response = chatModel.call(prompt);

while (response.hasToolCalls()) {
    ToolExecutionResult result = toolCallingManager.executeToolCalls(prompt, response);
    prompt = new Prompt(result.conversationHistory(), options);
    response = chatModel.call(prompt);
}
```

<a id="structured-output"></a>

## Structured Output

Mistral AI supports native structured outputs through JSON Schema, ensuring the model generates responses that strictly conform to your specified structure.
This feature is available for Mistral Small and later models.

<a id="_using_chatclient_with_native_structured_output"></a>

### Using ChatClient with Native Structured Output

The simplest way to use structured output is with the `ChatClient` high-level API and the `ENABLE_NATIVE_STRUCTURED_OUTPUT` advisor:

```java
record ActorsFilms(String actor, List<String> movies) {}

ActorsFilms actorsFilms = ChatClient.create(chatModel).prompt()
    .advisors(AdvisorParams.ENABLE_NATIVE_STRUCTURED_OUTPUT)
    .user("Generate the filmography of 5 movies for Tom Hanks.")
    .call()
    .entity(ActorsFilms.class);
```

This approach automatically:
- Generates a JSON schema from your Java class
- Configures the model to use native structured output
- Parses the response into your specified type

<a id="_using_responseformat_directly"></a>

### Using ResponseFormat Directly

For more control, you can use the `ResponseFormat` class with `MistralAiChatOptions`:

```java
record MovieRecommendation(String title, String director, int year, String plotSummary) {}

var options = MistralAiChatOptions.builder()
    .model(MistralAiApi.ChatModel.MISTRAL_SMALL.getValue())
    .responseFormat(ResponseFormat.jsonSchema(MovieRecommendation.class))
    .build();

ChatResponse response = chatModel.call(
    new Prompt("Recommend a classic science fiction movie.", options));
```

The `ResponseFormat` class provides several factory methods:

- `ResponseFormat.text()` - Returns plain text output (default)
- `ResponseFormat.jsonObject()` - Returns valid JSON (no schema enforcement)
- `ResponseFormat.jsonSchema(Class<?>)` - Generates schema from a Java class
- `ResponseFormat.jsonSchema(String)` - Uses a JSON schema string
- `ResponseFormat.jsonSchema(Map)` - Uses a JSON schema map

<a id="_json_mode_vs_structured_output"></a>

### JSON Mode vs Structured Output

Mistral AI supports two JSON-related modes:

- **JSON Mode** (`json_object`): Guarantees valid JSON output, but doesn’t enforce a specific structure
- **Structured Output** (`json_schema`): Guarantees output matching your JSON schema

```java
// JSON Mode - any valid JSON
var jsonMode = MistralAiChatOptions.builder()
    .responseFormat(ResponseFormat.jsonObject())
    .build();

// Structured Output - specific schema enforced
var structuredOutput = MistralAiChatOptions.builder()
    .responseFormat(ResponseFormat.jsonSchema(MyClass.class))
    .build();
```

For more information about structured outputs, see the [Structured Output Converter](../structured-output-converter.md) documentation.

<a id="_reasoning_models"></a>

## Reasoning Models

Mistral offers two approaches to reasoning:

- Adjustable: Available on Mistral Small 4 and Mistral Medium 3.5 via the `reasoning_effort` parameter. Enables the model to think to varying degrees.
- Native: Available for the Magistral model family. These models always generate reasoning traces and are purpose-built for deep reasoning tasks.

<a id="_reasoning_effort"></a>

### Reasoning Effort

You can configure the reasoning effort using the `reasoningEffort` property in `MistralAiChatOptions`.
This allows you to adjust the amount of computational effort the model spends on reasoning before generating a response.

```java
var options = MistralAiChatOptions.builder()
    .model(MistralAiApi.ChatModel.MISTRAL_SMALL.getValue()) // Or any adjustable reasoning model
    .reasoningEffort(MistralAiApi.ChatCompletionRequest.ReasoningEffort.HIGH)
    .build();

ChatResponse response = chatModel.call(
    new Prompt("Solve this complex math problem...", options));
```

<a id="_reasoning_content"></a>

### Reasoning Content

Mistral reasoning models expose their internal chain of thought and references.
Spring AI maps these from the API responses to the message metadata.

You can access the following metadata keys from the `AssistantMessage`:

- `reference_content`: The unique keys linking model responses to their source documents for traceability and citations.
- `thinking_content`: The step-by-step reasoning process the model used to arrive at its final answer (accessible only for reasoning models).
- `reference_thinking_content`: The unique keys linking the model’s reasoning steps to their source documents for traceability and citations (possibly accessible only for reasoning models).

```java
ChatResponse response = chatModel.call(new Prompt("Solve this complex math problem..."));

AssistantMessage message = response.getResult().getOutput();

// Access the thinking content from metadata
String thinking = (String) message.getMetadata().get(MistralAiChatModel.THINKING_CONTENT_METADATA);
if (thinking != null && !thinking.isEmpty()) {
    System.out.println("Model's thinking process:");
    System.out.println(thinking);
}
```

<a id="_multimodal"></a>

## Multimodal

Multimodality refers to a model’s ability to simultaneously understand and process information from various sources, including text, images, audio, and other data formats.
Mistral AI supports text and vision modalities.

<a id="_vision"></a>

### Vision

Mistral AI models offer vision multimodal support.
Refer to the [Vision](https://docs.mistral.ai/capabilities/vision/) guide for more information.

The Mistral AI [User Message API](https://docs.mistral.ai/api/#tag/chat/operation/chat_completion_v1_chat_completions_post) can incorporate a list of base64-encoded images or image urls with the message.
Spring AI’s [Message](https://github.com/spring-projects/spring-ai/blob/main/spring-ai-client-chat/src/main/java/org/springframework/ai/chat/messages/Message.java) interface facilitates multimodal AI models by introducing the [Media](https://github.com/spring-projects/spring-ai/blob/main/spring-ai-commons/src/main/java/org/springframework/ai/content/Media.java) type.
This type encompasses data and details regarding media attachments in messages, utilizing Spring’s `org.springframework.util.MimeType` and a `org.springframework.core.io.Resource` for the raw media data.

Below is a code example excerpted from `MistralAiChatModelIT.java`, illustrating the fusion of user text with an image.

```java
var imageResource = new ClassPathResource("/multimodal.test.png");

var userMessage = new UserMessage("Explain what do you see on this picture?",
        new Media(MimeTypeUtils.IMAGE_PNG, this.imageResource));

ChatResponse response = chatModel.call(new Prompt(this.userMessage,
        ChatOptions.builder().model(MistralAiApi.ChatModel.MISTRAL_LARGE.getValue()).build()));
```

or the image URL equivalent:

```java
var userMessage = new UserMessage("Explain what do you see on this picture?",
        new Media(MimeTypeUtils.IMAGE_PNG,
                URI.create("https://docs.spring.io/spring-ai/reference/_images/multimodal.test.png")));

ChatResponse response = chatModel.call(new Prompt(this.userMessage,
        ChatOptions.builder().model(MistralAiApi.ChatModel.MISTRAL_LARGE.getValue()).build()));
```

> [!TIP]
> You can pass multiple images as well.

The example shows a model taking as an input the `multimodal.test.png` image:

![Multimodal Test Image](https://raw.githubusercontent.com/spring-projects/spring-ai/v2.0.0/spring-ai-docs/src/main/antora/modules/ROOT/images/multimodal.test.png)

along with the text message "Explain what do you see on this picture?", and generating a response like this:

```
This is an image of a fruit bowl with a simple design. The bowl is made of metal with curved wire edges that
create an open structure, allowing the fruit to be visible from all angles. Inside the bowl, there are two
yellow bananas resting on top of what appears to be a red apple. The bananas are slightly overripe, as
indicated by the brown spots on their peels. The bowl has a metal ring at the top, likely to serve as a handle
for carrying. The bowl is placed on a flat surface with a neutral-colored background that provides a clear
view of the fruit inside.
```

<a id="_openai_api_compatibility"></a>

## OpenAI API Compatibility

Mistral is OpenAI API-compatible and you can use the [Spring AI OpenAI](openai-chat.md) client to talk to Mistrial.
For this, you need to configure the OpenAI base URL to the Mistral AI platform: `spring.ai.openai.chat.base-url=https://api.mistral.ai/v1`, and select a Mistral model: `spring.ai.openai.chat.model=mistral-small-latest` and set the Mistral AI API key: `spring.ai.openai.chat.api-key=<YOUR MISTRAL API KEY`.

Check the [MistralWithOpenAiChatModelIT.java](https://github.com/spring-projects/spring-ai/blob/main/models/spring-ai-openai/src/test/java/org/springframework/ai/openai/chat/proxy/MistralWithOpenAiChatModelIT.java) tests for examples of using Mistral over Spring AI OpenAI.

<a id="_sample_controller_auto_configuration"></a>

## Sample Controller (Auto-configuration)

[Create](https://start.spring.io/) a new Spring Boot project and add the `spring-ai-starter-model-mistral-ai` to your pom (or gradle) dependencies.

Add a `application.properties` file under the `src/main/resources` directory to enable and configure the Mistral AI chat model:

```application.properties
spring.ai.mistralai.api-key=YOUR_API_KEY
spring.ai.mistralai.chat.model=mistral-small-latest
spring.ai.mistralai.chat.temperature=0.7
```

> [!TIP]
> Replace the `api-key` with your Mistral AI credentials.

This will create a `MistralAiChatModel` implementation that you can inject into your classes.
Here is an example of a simple `@RestController` class that uses the chat model for text generations.

```java
@RestController
public class ChatController {

    private final MistralAiChatModel chatModel;

    @Autowired
    public ChatController(MistralAiChatModel chatModel) {
        this.chatModel = chatModel;
    }

    @GetMapping("/ai/generate")
    public Map<String,String> generate(@RequestParam(value = "message", defaultValue = "Tell me a joke") String message) {
        return Map.of("generation", this.chatModel.call(message));
    }

    @GetMapping("/ai/generateStream")
	public Flux<ChatResponse> generateStream(@RequestParam(value = "message", defaultValue = "Tell me a joke") String message) {
        var prompt = new Prompt(new UserMessage(message));
        return this.chatModel.stream(prompt);
    }
}
```

<a id="_manual_configuration"></a>

## Manual Configuration

The [MistralAiChatModel](https://github.com/spring-projects/spring-ai/blob/main/models/spring-ai-mistral-ai/src/main/java/org/springframework/ai/mistralai/MistralAiChatModel.java) implements the `ChatModel` and `StreamingChatModel` and uses the [Low-level MistralAiApi Client](#low-level-api) to connect to the Mistral AI service.

Add the `spring-ai-mistral-ai` dependency to your project’s Maven `pom.xml` file:

```xml
<dependency>
    <groupId>org.springframework.ai</groupId>
    <artifactId>spring-ai-mistral-ai</artifactId>
</dependency>
```

or to your Gradle `build.gradle` build file.

```groovy
dependencies {
    implementation 'org.springframework.ai:spring-ai-mistral-ai'
}
```

> [!TIP]
> Refer to the [Dependency Management](../../getting-started.md#dependency-management) section to add the Spring AI BOM to your build file.

Next, create a `MistralAiChatModel` and use it for text generations:

```java
var mistralAiApi = new MistralAiApi(System.getenv("MISTRAL_AI_API_KEY"));

var chatModel = new MistralAiChatModel(this.mistralAiApi, MistralAiChatOptions.builder()
                .model(MistralAiApi.ChatModel.MISTRAL_LARGE.getValue())
                .temperature(0.4)
                .maxTokens(200)
                .build());

ChatResponse response = this.chatModel.call(
    new Prompt("Generate the names of 5 famous pirates."));

// Or with streaming responses
Flux<ChatResponse> response = this.chatModel.stream(
    new Prompt("Generate the names of 5 famous pirates."));
```

The `MistralAiChatOptions` provides the configuration information for the chat requests.
The `MistralAiChatOptions.Builder` is a fluent options-builder.

<a id="low-level-api"></a>

### Low-level MistralAiApi Client

The [MistralAiApi](https://github.com/spring-projects/spring-ai/blob/main/models/spring-ai-mistral-ai/src/main/java/org/springframework/ai/mistralai/api/MistralAiApi.java) provides is lightweight Java client for [Mistral AI API](https://docs.mistral.ai/api/).

Here is a simple snippet showing how to use the API programmatically:

```java
MistralAiApi mistralAiApi = new MistralAiApi(System.getenv("MISTRAL_AI_API_KEY"));

ChatCompletionMessage chatCompletionMessage =
    new ChatCompletionMessage("Hello world", Role.USER);

// Sync request
ResponseEntity<ChatCompletion> response = this.mistralAiApi.chatCompletionEntity(
    new ChatCompletionRequest(List.of(this.chatCompletionMessage), MistralAiApi.ChatModel.MISTRAL_LARGE.getValue(), 0.8, false));

// Streaming request
Flux<ChatCompletionChunk> streamResponse = this.mistralAiApi.chatCompletionStream(
        new ChatCompletionRequest(List.of(this.chatCompletionMessage), MistralAiApi.ChatModel.MISTRAL_LARGE.getValue(), 0.8, true));
```

Follow the [MistralAiApi.java](https://github.com/spring-projects/spring-ai/blob/main/models/spring-ai-mistral-ai/src/main/java/org/springframework/ai/mistralai/api/MistralAiApi.java)'s JavaDoc for further information.

<a id="_mistralaiapi_samples"></a>

#### MistralAiApi Samples

- The [MistralAiApiIT.java](https://github.com/spring-projects/spring-ai/blob/main/models/spring-ai-mistral-ai/src/test/java/org/springframework/ai/mistralai/api/MistralAiApiIT.java) tests provide some general examples of how to use the lightweight library.
- The [PaymentStatusFunctionCallingIT.java](https://github.com/spring-projects/spring-ai/blob/main/models/spring-ai-mistral-ai/src/test/java/org/springframework/ai/mistralai/api/tool/PaymentStatusFunctionCallingIT.java) tests show how to use the low-level API to call tool functions.
Based on the [Mistral AI Function Calling](https://docs.mistral.ai/guides/function-calling/) tutorial.

<a id="_mistral_ai_ocr"></a>

## Mistral AI OCR

Spring AI supports Optical Character Recognition (OCR) with Mistral AI. This allows you to extract text and image data from documents.

<a id="_prerequisites_2"></a>

## Prerequisites

You will need to create an API with Mistral AI to access Mistral AI language models.
Create an account at [Mistral AI registration page](https://auth.mistral.ai/ui/registration) and generate the token on the [API Keys page](https://console.mistral.ai/api-keys/).

<a id="_add_dependencies"></a>

### Add Dependencies

To use the Mistral AI OCR API, you will need to add the `spring-ai-mistral-ai` dependency to your project.

```xml
<dependency>
    <groupId>org.springframework.ai</groupId>
    <artifactId>spring-ai-mistral-ai</artifactId>
</dependency>
```

or to your Gradle `build.gradle` build file.

```groovy
dependencies {
    implementation 'org.springframework.ai:spring-ai-mistral-ai'
}
```

<a id="_low_level_mistralocrapi_client"></a>

### Low-level MistralOcrApi Client

The [MistralOcrApi](https://github.com/spring-projects/spring-ai/blob/main/models/spring-ai-mistral-ai/src/main/java/org/springframework/ai/mistralai/api/MistralOcrApi.java) provides a lightweight Java client for [Mistral AI OCR API](https://docs.mistral.ai/api/#tag/OCR).

Here is a simple snippet showing how to use the API programmatically:

```java
MistralOcrApi mistralAiApi = new MistralOcrApi(System.getenv("MISTRAL_AI_API_KEY"));

String documentUrl = "https://arxiv.org/pdf/2201.04234";
MistralOcrApi.OCRRequest request = new MistralOcrApi.OCRRequest(
        MistralOcrApi.OCRModel.MISTRAL_OCR_LATEST.getValue(), "test_id",
        new MistralOcrApi.OCRRequest.DocumentURLChunk(documentUrl), List.of(0, 1, 2), true, 5, 50);

ResponseEntity<MistralOcrApi.OCRResponse> response = mistralAiApi.ocr(request);
```

Follow the [MistralOcrApi.java](https://github.com/spring-projects/spring-ai/blob/main/models/spring-ai-mistral-ai/src/main/java/org/springframework/ai/mistralai/api/MistralOcrApi.java)'s JavaDoc for further information.

<a id="_mistralocrapi_sample"></a>

#### MistralOcrApi Sample

- The [MistralOcrApiIT.java](https://github.com/spring-projects/spring-ai/blob/main/models/spring-ai-mistral-ai/src/test/java/org/springframework/ai/mistralai/api/MistralOcrApiIT.java) tests provide some general examples of how to use the lightweight library.
